# OpenEn-Hackathon

./: .gitignore  Dockerfile  app.py  baseline_results.json  inference.py  openenv.ipynb  pyproject.toml  requirements.txt  sample_sales_data.csv  setup.py  test.py
EDA_OpenEnv_Agent/: Dockerfile  Pipeline.py  README.md  app.py  app1.py  requirements.txt  run.py
EDA_OpenEnv_Agent/agent/: eda_agent.py
EDA_OpenEnv_Agent/env/: eda_env.py  llm_judge.py  models.py
EDA_OpenEnv_Agent/tools/: eda_tools.py
config/: openenv.yaml
env/: grader.py  reward.py
